# YooZi

./: LICENSE  README.md  README_CN.md
hardware/: back_cover.3mf  bottom_cover.3mf  left_handle.3mf  main_frame.3mf  right_handle.3mf  top_cover.3mf
production/: pom.xlsx
software/agent/: .gitignore  AEC_README.md  CMakeLists.txt
software/agent/.claude/: CLAUDE.md
software/agent/.yooz/skills/music_player/: SKILL.md
software/agent/.yooz/skills/music_search/: SKILL.md
software/agent/camera/: camera_capture.hpp  fallback_camera_capture.hpp  http_camera_capture.hpp  pi_camera_capture.hpp
software/agent/cmd/: main.cpp
software/agent/common/: logger.hpp
software/agent/context/: composer.hpp  skill.hpp
software/agent/engine/: agent_engine.hpp  reporter.hpp  terminal_reporter.hpp
software/agent/lib/anthropic/: anthropic.hpp  client.hpp  error.hpp  json_fwd.hpp
software/agent/lib/anthropic/http/: http_client.hpp
software/agent/lib/anthropic/types/: content_block.hpp  message.hpp  message_param.hpp  stop_reason.hpp  text_block.hpp  tool.hpp  tool_choice.hpp  tool_result_block.hpp  tool_use_block.hpp  usage.hpp
software/agent/provider/: claude_provider.hpp  openai_provider.hpp  provider.hpp
software/agent/schema/: message.hpp
software/agent/scripts/: refresh_nls_token.py
software/agent/speech/: alibaba_config.hpp  alibaba_speech_recognizer.hpp  alibaba_speech_synthesizer.hpp  speech_recognizer.hpp  speech_synthesizer.hpp
software/agent/tools/: base_tool.hpp  bash_tool.hpp  camera_tool.hpp  hermes_tool.hpp  read_file_tool.hpp  registry.hpp  speech_to_text_tool.hpp  text_to_speech_tool.hpp  windows_agent_tool.hpp  write_file_tool.hpp
software/agent/ui/: ftxui_display.hpp  ui_event_bus.hpp
software/agent/voice/: alsa_audio_capture.hpp  audio_capture.hpp  led_controller.hpp  vad.hpp  voice_engine.hpp  wav_writer.hpp
software/agent/ws/: ws_server.hpp
software/camera-stream/: CMakeLists.txt  main.cpp  start.sh
software/monitor-app/: pubspec.yaml
software/monitor-app/android/: build.gradle
software/monitor-app/android/app/: build.gradle
software/monitor-app/android/app/src/main/: AndroidManifest.xml
software/monitor-app/android/app/src/main/kotlin/com/example/monitor_app/: MainActivity.kt
software/monitor-app/lib/: main.dart
software/monitor-app/lib/screens/: monitor_screen.dart
software/monitor-app/lib/widgets/: mjpeg_stream.dart
software/monitor-app/test/: widget_test.dart
software/windows-proxy/: .gitignore  CMakeLists.txt  build.ps1  build_mingw.bat  kill_app.bat  start_app.bat  windows-proxy.pro
software/windows-proxy/src/: command_executor.cpp  command_executor.h  main.cpp  main_window.cpp  main_window.h  ollama_client.cpp  ollama_client.h  protocol.h  settings_dialog.cpp  settings_dialog.h  tray_icon.cpp  tray_icon.h  ws_client.cpp  ws_client.h
